fix max-width on mobile (#2723)

--- a/static_v2/scss/pages/_courseLanding.scss
+++ b/static_v2/scss/pages/_courseLanding.scss
@@ -127,6 +127,9 @@
     padding: 0 28px;
     max-width: 70%;
     min-height: 112px;
+    @include media-breakpoint-down(sm) {
+      max-width: 100%;
+    }
 
     &:first-child {
       > .holder {
